按照明审专家建议修改
按照明审专家建议修改，谢谢沈淳老师和李菁老师！希望visa和app都能顺利，尤其是学、位、认、证和背、景、调、查！

--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -28,7 +28,7 @@
 
   坏死性小肠结肠炎NEC诊断和分级根据“改良Bell分级标准”\cite{bell1978neonatal}：II期，伴有放射性肠扩张，肠梗阻，肠道积气和/或腹部压痛，和/或轻度代谢性酸中毒，肠鸣音减弱，血小板减少症。
 
-  迟发型脓毒血症LOS确诊标准：如果患儿在出生后72小时后，由至少两位新生儿科医生独立检查确认脓毒症体征/症状，血培养或其他体液培养阳性或可疑阳性，并接受过高级别抗生素治疗（例：美罗培南等），则诊断为LOS。
+  迟发型脓毒血症LOS确诊标准：如果患儿在出生后72小时后，由至少两位新生儿科医生独立检查确认脓毒症体征/症状，血培养或其他体液培养阳性或可疑阳性，并接受过高级别抗生素治疗（例：氨基糖苷类抗生素美罗培南等），则诊断为LOS。
 
   住院期间无感染性并发症或脓毒血症、无NEC的患儿纳入对照组。
 
@@ -245,7 +245,7 @@
 
     本研究最终选择24个有足够样品数量（大于6个）的早产儿，包括4名坏死性小肠结肠炎（NEC）患儿（2个IIA期和2个IIB期），3个迟发型脓毒血症LOS和17个匹配对照（表S1）；样本共192个，其中NEC标本45个，LOS标本44个，对照组标本103个，并进行16s rRNA 基因测序。
 
-    本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（945克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后第16天（范围：11至19天），确诊为LOS的平均日龄为16天（图\ref{fig:2dol}）。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
+    本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（975克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后第16天（范围：11至19天），确诊为LOS的平均日龄为16天（图\ref{fig:2dol}）。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
 
     \begin{table}[!hpb]
       \centering
@@ -270,7 +270,7 @@
     }
 
 
-    一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后脓毒血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表\ref{tab:2demograph}）。
+    一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后脓毒血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天、15天和13后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表\ref{tab:2demograph}）。
 
     根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
 
@@ -292,7 +292,7 @@
   \subsection{分类学分析}
   对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从域（domain）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
     \subsubsection{门（phylum）水平}
-    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门为主导（{\textit{Actinobacteria}）。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Bacilli})丰度在NEC组最高（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
+    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门{\textit{Actinobacteria}）为主导（。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Firmicutes})丰度在NEC组最高（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
       %门水平配图
       \begin{figure}[!htp]
         \centering
@@ -304,7 +304,7 @@
       \end{figure}
 
     \subsubsection{纲（class）水平}
-    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；杆菌纲(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Clostridia}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2class}）（图\ref{fig:2class}）。
+    在纲水平，三组患儿肠道内以$\gamma$-变形菌纲（\textit{$\gamma$-Proteobacteria}）、杆菌纲(\textit{Bacilli})、梭菌纲（\textit{Clostridia}）和放线菌纲（\textit{Actinobacteria}）为主导。$\gamma$-变形菌纲\textit{$\gamma$-Proteobacteria}）的丰度在LOS组最高（59.57\%），对照组次之（50.51\%），NEC组最低（38.06\%），三组丰度显著不同（p = 0.013）；杆菌纲(\textit{Bacilli})丰度在组最高NEC（53.56\%），对照组次之（39.19\%），LOS组最低（32.17\%），且三组间丰度呈显著性差异（p = 0.015）；梭菌纲（\textit{Clostridia}）丰度在LOS组最高（6.54\%），NEC组次之（5.36\%），对照组最低（4.86\%），三组丰度差异在统计学上不显著（p = 0.236）；放线菌纲（\textit{Actinobacteria}）的丰度在对照组最高（3.40\%），在LOS和NEC丰度相似（前者0.63\%，后者1.01\%，组间差异不显著（p = 0.76）），三组间丰度差异显著（p = 0.001）（图\ref{fig:2class}）（图\ref{fig:2class}）。
       %纲水平配图
       \begin{figure}[!htp]
         \centering
@@ -452,10 +452,10 @@
 
 此外，LOS组中显著的肠球菌表明高级别抗生素治疗会对菌群平衡产生较大影响。尽管脓毒症中确切的微生物群组成仍有待通过动物研究来阐明\cite{Hand2012a,Sekirov2009}，脓毒症，免疫反应和微生物群破坏的机制及其后果可能有助于对脓毒血症进展的理解，并有助于疾病的预防。在一项关于成人的临床研究中，系统性炎症反应综合症对患者肠道厌氧菌减少和肠道致病菌增加与更高的脓毒血症并发症和更高的死亡率相关\cite{Shimizu2011}；菌群的早期异常定植也与医院相关事件相关\cite{Dutta2014}，包括机械通气和抗生素治疗\cite{Moles2013}。虽然我们相对较小的样本量仅显示特定菌属与脓毒血症发病相关的证据有限，但脓毒症患儿的宿主 - 微生物群 - 病原体相互作用值得进一步研究。
 
-另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是分娩方式，喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。
+另一项研究发现，早产儿肠道微生物群的定植和突然变化可能是喂养类型和孕龄的结果\cite{Dutta2014}。以往研究在早产儿中观察到从芽孢杆菌，$\gamma$芽孢杆菌到梭菌的一系列细菌\cite{LaRosa2014}）的先后主导作用在本研究内在包括LOS患者在内的大多数研究受试者中也观察到。本研究证实了出生后以周为时间单位的细菌定植模式，并发现每组肠道微生物群在不同组患儿间存在的显着差异。此外，本研究数据显示，在出生后第14天，NEC和对照组之间的肠道微生物群显着不同，尽管在出生后的前14天内具有相似的定植模式（图\ref{fig:2ingroupweek})，Anosim r = 0.32 p = 0.001），表明肠道微生态失调与NEC发病之间的强相关性。最后，肠道微生物群在出生后第21天至第28天的差异（图\ref{fig:2ingroupweek}，ANOSIM r = 0.27，p = 0.030）表明在NEC进展期间持续的生态失调，这与之前的横断面研究一致\cite{Wang2009}。另外，多项研究表明，分娩方式对于新生儿肠道菌群的建立尤为关键。通过剖宫产娩出的婴儿肠道内有益菌（双歧杆菌和乳杆菌等）数量显著低于自然分娩出的婴儿\cite{Dutta2014}。本研究中的患儿皆通过剖宫产娩出，且其16s测序无法证实上述两种有益菌的存在。该结果大致与以往研究相似，然而由于本研究未纳入自然分娩的患儿进行比较分析，因此不排除是测序和分析深度的对分析结果存在限制作用。
 
 \section{结论}
-本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定植模式”是早产儿NEC和LOS发生进展的重要因素。具体来说：
+本研究使用高通量测序描述、比较和分析早产儿出生后肠道微生物群的动态模式在NEC和LOS早产儿中的作用的研究。我们的研究结果支持了“肠道生态失调假说”，即肠道微生物群的“异常动态定植模式”是早产儿NEC和LOS发生进展的重要因素。具体来说：
 
 1. 早产儿出生后第2周起，肠道菌群定植模式出现紊乱并逐渐发展为早产特定感染，NEC和LOS分别呈现不同的纵向变化规律，包括不同致病菌属的丰度增加及菌群多样性不同程度的降低，并且与临床变化相关。
 
