--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -19,7 +19,7 @@
     \begin{description}
       \item[目的] 比较先天性巨结肠(HD)、先天性巨结肠小肠结肠炎(HAEC)、坏死型小肠结肠炎(NEC)和炎症性肠病(IBD)肠道菌群的异同。
       \item[方法] 入选HAEC患儿4例，HD患儿7例，NEC患儿6例，IBD患儿7例，共24例。采集其横向粪便标本，共58个，其中HAEC标本14个，HD标本22个，NEC标本15个，IBD标本7个。扩增每个粪便样品的16s rRNA基因的细菌V3~V4区域并测序；后续分析包括：OTU聚类，各分类水平注释，多样性分析和多级物种判别分析。
-      \item[结果] 三组肠道感染患儿，包括HAEC、NEC和IBD的肠道菌群$\alpha$多样性相仿，且均低于巨结肠患儿和同龄健康儿童；另外，菌群内部组成和丰度（$\beta$多样性）在四组患儿间未见显著性差异（PC1 = 32.07\%, PC2 = 24.84\%）。从分类进化角度，肠炎患儿菌群在门水平上的组成大致类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属（38.02\%，p = 0.01），总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷博菌属为主导菌。另外，IBD组可见较高水平的韦荣氏球菌（14\%, p = 0.02），后者与肠道黏膜上皮炎症反映密切相关。
+      \item[结果] 三组肠道感染患儿，包括HAEC、NEC和IBD的肠道菌群$\alpha$多样性相仿，且均低于巨结肠患儿；另外，菌群内部组成和丰度（$\beta$多样性）在四组患儿间未见显著性差异（PC1 = 32.07\%, PC2 = 24.84\%）。从分类进化角度，肠炎患儿菌群在门水平上的组成大致类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属（38.02\%，p = 0.01），总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷博菌属为主导菌。另外，IBD组可见较高水平的韦荣氏球菌（14\%, p = 0.02），后者与肠道黏膜上皮炎症反映密切相关。
       \item[结论] 肠道微生态失衡包括多样性降低、格兰阴性菌丰度增加，其对于肠道炎症状态的影响具有一定共性，这也可能是三种肠炎有着类似临床表现和病理特征的内在关联因素。
     \end{description}
 \end{abstract}
