--- a/tex/chap1intro.tex
+++ b/tex/chap1intro.tex
@@ -46,7 +46,7 @@
 \subsection{炎症性肠病与肠道菌群紊乱}
 尽管儿科IBD的发病机制和诊断程序与成人IBD相似，但是前者的疾病程度较严重，病情进展较快，易发生并发症，易存在生长迟缓，营养不良等。其病因及发病机制尚不完全明确，目前认为遗传易感性、肠道菌群紊乱以及免疫应答异常对于IBD发病起到贡献作用\cite{liang2014role}。
 
-近期，越来越多的研究支持肠道菌群紊乱在IBD发病中的作用。厚壁菌门（\textit{Firmitutes}）,尤其是\textit{Firmitutes prausnitzii}在扩罗恩病患者的粪便中丰度减少\cite{mosca2016gut}；另外黏附侵袭性大肠杆菌（adherent-invasive \textit{Escherichia coil}，AIEC）和副结核分枝杆菌（\textit{Mycobacteriumavium subspecies paratuberculosis}）在IBD发病中作用也相对显著。在2012年，AIEC的EC15和EC10菌株被首次发现于IBD患儿肠道炎症组织中\cite{negroni2011characterization}；在体外试验中，AIEC在肠道上皮细胞中的复制增殖能力很强，可以诱导肿瘤坏死因子TNF-$\alpha$分泌，与克罗恩病患者回肠黏膜病变相关\cite{o2017comparative}。与健康人相比，克罗恩病患儿肠道内真菌紊乱较为明显，表现为担子菌门（\textit{Basidiomycota}）：子囊菌门（\textit{Ascomycota}）比例降低，以及白色念珠菌（\textit{Candida albicans}）丰度增高\cite{sokol2017fungal}。
+近期，越来越多的研究支持肠道菌群紊乱在IBD发病中的作用。厚壁菌门（\textit{Firmitutes}）,尤其是\textit{Firmitutes prausnitzii}在克罗恩病患者的粪便中丰度减少\cite{mosca2016gut}；另外黏附侵袭性大肠杆菌（adherent-invasive \textit{Escherichia coil}，AIEC）和副结核分枝杆菌（\textit{Mycobacteriumavium subspecies paratuberculosis}）在IBD发病中作用也相对显著。在2012年，AIEC的EC15和EC10菌株被首次发现于IBD患儿肠道炎症组织中\cite{negroni2011characterization}；在体外试验中，AIEC在肠道上皮细胞中的复制增殖能力很强，可以诱导肿瘤坏死因子TNF-$\alpha$分泌，与克罗恩病患者回肠黏膜病变相关\cite{o2017comparative}。与健康人相比，克罗恩病患儿肠道内真菌紊乱较为明显，表现为担子菌门（\textit{Basidiomycota}）：子囊菌门（\textit{Ascomycota}）比例降低，以及白色念珠菌（\textit{Candida albicans}）丰度增高\cite{sokol2017fungal}。
 
 \section{肠道菌群研究与宏基因组学技术}
 宏基因组学技术是指通过直接从样品中提取全部微生物的DNA，构建文库并筛选，利用基因组学的研究策略来研究样品中所包含的全部遗传组成和功能。由于菌群中的大部分微生物尚且被认为“无法培养”，并且传统上认为通过纯培养的方式难以进行微生物研究，因此宏基因组方法的出现使研究人员能够通过DNA测序和异源宿主中宏基因组DNA的功能表达，以与培养无关的方式获取和研究这些微生物。宏基因组学揭示了非凡的多样性和新颖性，不仅在微生物群落本身，而且在这些微生物的基因组中。宏基因组分析可涉及基于序列或功能的方法（或两者的组合）。 DNA测序技术的不断改进以及成本的大幅降低使得宏基因组学领域的发展迅速。
