--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -80,15 +80,15 @@
     \begin{enumerate}
       \item 向所提供的PowerBead管中加入不少于0.25克粪便标本（均质化和裂解程序，管内的缓冲剂将（a）帮助分散土壤颗粒，（b）开始溶解腐殖酸（c）保护核酸免于降解）
       \item 使用漩涡混合器，轻轻涡旋混合（开始将样品分散在PowerBead溶液中）。
-      \item 检查溶液C1，如果观察到C1沉淀，将溶液置于恒温金属浴60°C直至沉淀物在使用前溶解。溶液C1可以在加热后直接使用。（溶液C1包含SDS和其他裂解细胞所需的阻断成分；SDS作为一种阴离子洗涤剂，也可帮助分解与细菌细胞膜相关的脂肪酸和脂质有关的脂肪酸。金属浴60°C将溶解SDS，但不会损害SDS或其他阻断成分。）
+      \item 检查溶液C1，如果观察到C1沉淀，将溶液置于恒温金属浴60\textdegree C直至沉淀物在使用前溶解。溶液C1可以在加热后直接使用。（溶液C1包含SDS和其他裂解细胞所需的阻断成分；SDS作为一种阴离子洗涤剂，也可帮助分解与细菌细胞膜相关的脂肪酸和脂质有关的脂肪酸。金属浴60\textdegree C将溶解SDS，但不会损害SDS或其他阻断成分。）
       \item 在PowerBead管中加入60μl溶液C1并手动翻转数次，或也可以短暂涡旋混合。
       \item 使用小珠研磨器MiniBeatbeater™垂直固定PowerBead管，以最大速度涡旋15分钟。（注意：1）标准时间为10分钟，但本课题使用24孔Beatbbeater™，故涡旋时间增加至15分钟；2）涡旋步骤对于完全均质化和细胞裂解是至关重要的。 通过来自步骤1-4的化学试剂和在该步骤引入的机械振荡的组合裂解细胞。 通过在破坏剂存在下随机摇动珠子，珠子与微生物细胞的机械震荡、碰撞将是的微生物细胞完全破裂。）
       \item 确保PowerBead管在离心机中无摩擦、可自由旋转。 在室温下以10,000xg离心1分钟。 （注意：1）转速不应超过10,000 x g，因为管子可能会破裂。2）标准流程离心时间为30秒，由于本课题所收取的样品量有时较多，经尝试，离心时间1分钟的离心效果较好。）
       \item 将第（6）步中收取的上清液转移至干净的2 ml收集管（试剂盒提供）中，该步骤上清液约500μl。
-      \item 将250μl溶液C2加入步骤（7）中的收集管中，然后涡旋5秒；在4°C环境中孵育5分钟。（溶液C2为 Inhibitor Removal Technology\textsuperscript{\textregistered}（IRT），含有一种沉淀非DNA有机和无机物质的试剂，包括腐殖质，细胞碎片和蛋白质，同时可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。）
+      \item 将250μl溶液C2加入步骤（7）中的收集管中，然后涡旋5秒；在4\textdegree C环境中孵育5分钟。（溶液C2为 Inhibitor Removal Technology\textsuperscript{\textregistered}（IRT），含有一种沉淀非DNA有机和无机物质的试剂，包括腐殖质，细胞碎片和蛋白质，同时可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。）
       \item 在室温下，离心步骤（8）中的收集管，转速10，000 x g，离心时间1分钟。
       \item 将步骤（9）中收取的上清液（体积不多于600μl的）转移至新的干净的2 ml收集管（试剂盒提供）中，注意吸头避免碰触沉淀。（此时的沉淀含有非DNA有机和无机物质，包括腐殖酸，细胞碎片和蛋白质。为了获得最佳的DNA产量和质量，请避免转移任何沉淀。）
-      \item 将200μl溶液C3加入步骤（10）中的上清液中，并短暂涡旋。在4°C孵育5分钟。（溶液C3为 Inhibitor Removal Technology\textsuperscript{\textregistered}，IRT），是另一种沉淀其他非DNA有机和无机物质的试剂，包括腐殖酸，细胞碎片和蛋白质，也可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。
+      \item 将200μl溶液C3加入步骤（10）中的上清液中，并短暂涡旋。在4\textdegree C孵育5分钟。（溶液C3为 Inhibitor Removal Technology\textsuperscript{\textregistered}，IRT），是另一种沉淀其他非DNA有机和无机物质的试剂，包括腐殖酸，细胞碎片和蛋白质，也可去除可能降低DNA纯度并抑制下游DNA应用的污染性有机和无机物质。
       \item 在室温下，离心步骤（11）中的收集管，转速10，000 x g，离心时间1分钟。
       \item 将步骤（12）中收取的上清液（体积不多于750μl的）转移至新的干净的2 ml收集管（试剂盒提供）中，注意吸头避免碰触沉淀。（此时的沉淀含有非DNA有机和无机物质，包括腐殖酸，细胞碎片和蛋白质。为了获得最佳的DNA产量和质量，请避免转移任何沉淀。）
       \item 使用溶液C4前，将其轻轻摇匀。将1.2ml溶液C4加入步骤（13）中的收集管中（此步骤小心缓慢，避免溶液溢出收集管边缘），然后涡旋5秒。（溶液C4是高浓度盐溶液。 由于DNA在高盐浓度下与二氧化硅紧密结合，因此C4可以调节DNA溶液盐浓度，以使DNA（但可能仍然有低水平的非DNA有机和无机物质）与离心过滤管Spin Filter的滤膜结合。）
@@ -97,11 +97,11 @@
       \item 弃去步骤（16）中的下层离心液（含有非DNA的无机和有机物质）。
       \item 于室温下，再次将Spin Filter离心，转速10，000 x g，离心时间1分钟。尽可能完全除去残留的溶液C5（乙醇基洗涤溶液），因为乙醇会干扰许多下游DNA步骤，如PCR，限制性消化和凝胶电泳。
       \item 小心将Spin Filter 置于新的干净的2ml收集管（试剂盒已提供）中，避免将任何溶液C5带入新收集管。
-      \item 将100μl溶液C6小心加入Spin Filter的白色滤膜上，保证整个滤膜充分浸润超市，然后静置等待1~2分钟。（溶液C6可与滤膜中的高浓度盐溶液结合，促使DNA与盐溶液解离并洗脱。因此，本课题在此处选择将其滤膜于室温下静置等待1~2分钟，以确保DNA更大程度的解离，后续浓度更高而适合建库测序。）
+      \item 将100μl溶液C6小心加入Spin Filter的白色滤膜上，保证整个滤膜充分浸润，然后静置等待1~2分钟。（溶液C6可与滤膜中的高浓度盐溶液结合，促使DNA与盐溶液解离并洗脱。因此，本课题在此处选择将其滤膜于室温下静置等待1~2分钟，以确保DNA更大程度的解离，后续浓度更高而适合建库测序。）
       \item 在室温下，将步骤（20）中的Spin Filter和收集管离心，转速10，000 x g，离心时间1分钟。
       \item 弃去Spin Filter，得到粪便样本总DNA。
       \item DNA提取质控：利用超微量紫外线分光光度计（型号NanoDrop 2000C）检测DNA，目标浓度约50ng/ml。利用1\%琼脂糖凝胶电泳检测DNA提取质量。
-      \item 将通过质控的DNA样本置于-80°C冰箱中上海美吉生物医药科技有限公司进行后续扩增。
+      \item 将通过质控的DNA样本置于-80\textdegree C冰箱中上海美吉生物医药科技有限公司进行后续扩增。
     \end{enumerate}
 
   \subsection{总DNA 16s rRNA V3-V4可变区片段的扩增}
@@ -290,9 +290,9 @@
 
   使用Illumina MiSeq高通量测序、优化后，得到7,472,400条16s rRNA基因序列，碱基数目共3348030799；优化碱基数目为3348,030,799，优化平均序列长度为448bp。
   \subsection{分类学分析}
-  对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从域（domain）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
+  对于测序数据进行OTU聚类，采用RDP classifier贝叶斯算法对97\%相似水平的OTU代表序列进行分类学分析，并分别在各个分类水平（从门（phylum）到属（genus））统计各样本的群落组成，比对silva数据库得出各群落数量。
     \subsubsection{门（phylum）水平}
-    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门{\textit{Actinobacteria}）为主导（。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Firmicutes})丰度在NEC组最高（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
+    在门水平，三组患儿肠道内以变形菌门（\textit{Proteobacteria}）、厚壁菌门(\textit{Firmicutes})、和放线菌门{\textit{Actinobacteria}）为主导。变形菌门的丰度在LOS组最高（59.67\%），对照组次之（59.67\%），NEC组最低（38.53\%），三组丰度显著不同（p = 0.017）；厚壁菌门(\textit{Firmicutes})丰度在NEC组最高（59.59\%），对照组次之（44.88\%），LOS组最低（39.54\%），且三组间丰度呈显著性差异（p = 0.017）；放线菌门（{\textit{Actinobacteria}）的丰度对照组最高（3.40\%），NEC组次之（1.10\%），LOS组最低（0.06\%），三组丰度组间差异显著（p = 0.001）（图\ref{fig:2phylum}）。
       %门水平配图
       \begin{figure}[!htp]
         \centering
