--- a/tex/chap3compare.tex
+++ b/tex/chap3compare.tex
@@ -82,6 +82,7 @@
         \textbf{性别} &  &  &  & & Fisher's test & 0.628 \\
         \multicolumn{1}{r}{女} & 1(25\%) & 1(14\%) & 2(33\%) & 2(29\%) &  & \\
         \multicolumn{1}{r}{男} & 3(75\%) & 6(86\%) & 4(67\%) & 5(71\%) &  &\\
+        \textbf{标本总数} & 14 & 22 & 15 & 7 & - & - \\
          \bottomrule
     \end{tabular}
   \end{table}
@@ -165,7 +166,7 @@
   综上，我们利用 Illumina Miseq 测序技术探究儿科肠道炎症性疾病的肠道菌群特点。我们发现：
   1. HAEC、HD、NEC及IBD患儿菌群丰富度和均匀度类似，均低于同龄健康儿童。HD患儿菌群多样性稍高于三组肠炎患儿。
   2. 四组患儿菌群内部组成结构类似，提示炎症状态与肠道菌群紊乱的相关性。
-  3. 从进化角度，肠炎患儿菌群在门水平上的组成大致类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属，总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷博菌属为主导菌。另外，NEC和IBD组可见较高水平的韦荣氏球菌，后者与肠道黏膜上皮炎症反映密切相关。
+  3. 从进化角度，肠炎患儿菌群在门水平上的组成大致类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属，总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷伯菌属为主导菌。另外，NEC和IBD组可见较高水平的韦荣氏球菌，后者与肠道黏膜上皮炎症反映密切相关。
   4. 本研究为儿科肠道炎症性疾病患儿类似的临床表现和病理变化提供了理论依据。
   由此，如何阻断NEC和HAEC肠道菌群模式的改变，进而改善优化其肠道菌群模式，可能是防治肠炎反复发作、降低未来并发IBD风险的新途径。
 
