--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -24,7 +24,7 @@
 
   本研究利用第二代高通量测序平台对先天性巨结肠(HD)、先天性巨结肠相关性小肠结肠炎(HAEC)、坏死型小肠结肠炎(NEC)和炎症性肠病(IBD)四组患儿的肠道菌群进行测序，深入探寻菌群模式与儿科肠道炎症性疾病间的关联。
 
-  通过多样性分析，我们发现三组肠炎患儿肠道菌群多样性相仿，且均低于巨结肠患儿和同龄健康儿童；另外，菌群内部组成和丰度在四组患儿间未见显著性差异，提示菌群失调对于肠道炎症状态的影响是具有一定共性的。
+  通过多样性分析，我们发现三组肠炎患儿肠道菌群多样性相仿，且均低于巨结肠患儿和同龄健康儿童；另外，菌群内部组成和丰度在四组患儿间未见显著性差异，提示即便在不同疾病的肠道炎症状态下，菌群失调依然存在一定共性。
 
   从进化角度，肠炎患儿菌群在门水平上的组成大致类似，且HAEC患儿菌群的组成和丰度与IBD患儿类似；但具体到属水平则各不相同：HAEC患儿以肠球菌为优势菌属，总体组成成分与HD类似；IBD患儿各菌属丰度大致相当；NEC患儿肠道菌群构成则较为简单，且以克雷博菌属为主导菌。另外，IBD组可见较高水平的韦荣氏球菌，后者与肠道黏膜上皮炎症反映密切相关。
 
